Hide stereotypes and nest flows under global header