@@ -25,18 +25,26 @@ import javafx.concurrent.Task;
 import javafx.scene.control.SpinnerValueFactory;
 import javafx.scene.control.Slider;
 
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.OutputStream;
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
+import java.io.IOException;
 import java.util.*;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.prefs.Preferences;
+import javax.imageio.ImageIO;
 import net.sourceforge.plantuml.SourceStringReader;
 import net.sourceforge.plantuml.FileFormat;
 import net.sourceforge.plantuml.FileFormatOption;
+import org.apache.pdfbox.pdmodel.PDDocument;
+import org.apache.pdfbox.pdmodel.PDPage;
+import org.apache.pdfbox.pdmodel.PDPageContentStream;
+import org.apache.pdfbox.pdmodel.common.PDRectangle;
+import org.apache.pdfbox.pdmodel.graphics.image.LosslessFactory;
+import org.apache.pdfbox.pdmodel.graphics.image.PDImageXObject;
 
 public class AppController {
 
@@ -2887,6 +2895,181 @@ public class AppController {
 
     private static String safe(String v) { return v == null ? "" : v; }
 
+    private static String sanitizeForPlantUml(String value) {
+        if (value == null) {
+            return "";
+        }
+
+        String cleaned = value.chars()
+            .mapToObj(c -> {
+                if (c < 32 || c == 127) {
+                    return " ";
+                }
+                return String.valueOf((char) c);
+            })
+            .collect(Collectors.joining());
+
+        String normalized = cleaned
+            .replace("[", "(")
+            .replace("]", ")")
+            .replace("{", "(")
+            .replace("}", ")")
+            .replace("<", "(")
+            .replace(">", ")")
+            .replace("|", "/")
+            .replace("\\", "/")
+            .replace("\"", "'")
+            .replaceAll("\\s+", " ")
+            .trim();
+
+        return normalized.length() > 0 ? normalized : "-";
+    }
+
+    private static String sanitizeLabelOrEmpty(String value) {
+        if (value == null || value.trim().isEmpty()) {
+            return "";
+        }
+
+        String sanitized = sanitizeForPlantUml(value);
+        return "-".equals(sanitized) ? "" : sanitized;
+    }
+
+    private static boolean isImmediateTime(String value) {
+        if (value == null) {
+            return false;
+        }
+
+        String normalized = value.trim().toLowerCase(Locale.ROOT).replaceAll("\\s+", "");
+        if (normalized.isEmpty()) {
+            return false;
+        }
+
+        if (normalized.equals("immediate") || normalized.equals("immediately") || normalized.equals("now")) {
+            return true;
+        }
+
+        return normalized.equals("0")
+            || normalized.equals("0s")
+            || normalized.equals("0sec")
+            || normalized.equals("0secs")
+            || normalized.equals("0second")
+            || normalized.equals("0seconds");
+    }
+
+    private String buildVisualFlowDiagram(String tabLabel, String configLabel, List<ExcelParserV5.FlowRow> flows) {
+        StringBuilder plantuml = new StringBuilder();
+        plantuml.append("@startuml\n");
+        plantuml.append("top to bottom direction\n");
+        plantuml.append("skinparam shadowing false\n");
+        plantuml.append("skinparam backgroundColor #FFFFFF\n");
+        plantuml.append("hide stereotype\n");
+        plantuml.append("skinparam rectangle {\n");
+        plantuml.append("  RoundCorner 16\n");
+        plantuml.append("  FontSize 14\n");
+        plantuml.append("  FontColor #111111\n");
+        plantuml.append("}\n");
+        plantuml.append("skinparam rectangle<<GlobalHeader>> {\n");
+        plantuml.append("  BackgroundColor #ffffff\n");
+        plantuml.append("  BorderColor #b5b5b5\n");
+        plantuml.append("}\n");
+        plantuml.append("skinparam rectangle<<FlowHeader>> {\n");
+        plantuml.append("  BackgroundColor #dcdcdc\n");
+        plantuml.append("  BorderColor #9a9a9a\n");
+        plantuml.append("}\n");
+        plantuml.append("skinparam rectangle<<StopA>> {\n");
+        plantuml.append("  BackgroundColor #c8f7c5\n");
+        plantuml.append("  BorderColor #4f9a4f\n");
+        plantuml.append("}\n");
+        plantuml.append("skinparam rectangle<<StopB>> {\n");
+        plantuml.append("  BackgroundColor #cfe2ff\n");
+        plantuml.append("  BorderColor #4a78c2\n");
+        plantuml.append("}\n");
+        plantuml.append("skinparam ArrowColor #333333\n");
+        plantuml.append("skinparam ArrowFontSize 12\n");
+        plantuml.append("skinparam ArrowThickness 1.4\n\n");
+
+        String globalHeaderLabel = tabLabel + " — " + configLabel;
+        plantuml.append("rectangle \"").append(globalHeaderLabel).append("\" as GlobalHeader_1 <<GlobalHeader>> {\n");
+        plantuml.append("together {\n");
+
+        int rowCounter = 1;
+        for (ExcelParserV5.FlowRow row : flows) {
+            String[] recipients = { row.r1, row.r2, row.r3, row.r4, row.r5 };
+            String[] times = { row.t1, row.t2, row.t3, row.t4, row.t5 };
+
+            List<Integer> steps = new ArrayList<>();
+            for (int i = 0; i < recipients.length; i++) {
+                if (recipients[i] != null && !recipients[i].trim().isEmpty()) {
+                    steps.add(i);
+                }
+            }
+
+            if (steps.isEmpty()) {
+                continue;
+            }
+
+            List<String> headerLines = new ArrayList<>();
+            headerLines.add(sanitizeForPlantUml(row.alarmName));
+            String priority = sanitizeForPlantUml(row.priorityRaw);
+            if (!"-".equals(priority)) {
+                headerLines.add(priority);
+            }
+            String headerLabel = String.join("\\n", headerLines);
+            String headerId = "FlowHeader_" + rowCounter;
+            plantuml.append("  rectangle \"").append(headerLabel).append("\" as ")
+                .append(headerId).append(" <<FlowHeader>>\n");
+
+            String firstArrowLabel;
+            if (isImmediateTime(times[0])) {
+                firstArrowLabel = "Immediate";
+            } else {
+                firstArrowLabel = sanitizeLabelOrEmpty(times[0]);
+            }
+
+            String previousId = headerId;
+
+            for (int i = 0; i < steps.size(); i++) {
+                int idx = steps.get(i);
+                String stageId = "Stop_" + rowCounter + "_" + (i + 1);
+                String recipientLabel = sanitizeForPlantUml(recipients[idx]);
+
+                String stageLabel = String.join("\\n",
+                    "Alarm Stop " + (i + 1),
+                    "Recipient:",
+                    recipientLabel
+                );
+
+                String stereo = (i % 2 == 0) ? "StopA" : "StopB";
+
+                plantuml.append("  rectangle \"").append(stageLabel).append("\" as ")
+                    .append(stageId).append(" <<").append(stereo).append(">>\n");
+
+                String arrowLabel = "";
+                if (previousId.equals(headerId)) {
+                    arrowLabel = firstArrowLabel;
+                } else {
+                    arrowLabel = sanitizeLabelOrEmpty(times[idx]);
+                }
+
+                plantuml.append("  ").append(previousId).append(" -down-> ").append(stageId);
+                if (arrowLabel != null && !arrowLabel.isEmpty()) {
+                    plantuml.append(" : ").append(arrowLabel);
+                }
+                plantuml.append("\n");
+
+                previousId = stageId;
+            }
+
+            plantuml.append("\n");
+            rowCounter++;
+        }
+
+        plantuml.append("}\n");
+        plantuml.append("}\n\n");
+        plantuml.append("@enduml\n");
+        return plantuml.toString();
+    }
+
     // ---------- Remember Directory ----------
     private void rememberDirectory(File file, boolean isExcel) {
         if (file == null) return;
@@ -3424,44 +3607,42 @@ public class AppController {
                 showError("No rows are checked (in scope). Please check some rows first.");
                 return;
             }
-            // Group by config group
+            final String groupDelimiter = "||";
             Map<String, List<ExcelParserV5.FlowRow>> grouped = checkedRows.stream()
-                .collect(Collectors.groupingBy(r -> r.configGroup != null ? r.configGroup : "Unknown"));
-            // Build PlantUML component diagram (simple box/line)
-            StringBuilder plantuml = new StringBuilder();
-            plantuml.append("@startuml\n");
-            plantuml.append("title Alarm Flow (Box Diagram)\n");
-            plantuml.append("skinparam componentStyle rectangle\n");
-            for (Map.Entry<String, List<ExcelParserV5.FlowRow>> entry : grouped.entrySet().stream().sorted(Map.Entry.comparingByKey()).collect(Collectors.toList())) {
-                plantuml.append("package \"").append(safe(entry.getKey())).append("\" {\n");
-                for (ExcelParserV5.FlowRow row : entry.getValue()) {
-                    String alarmId = "Alarm_" + Math.abs(row.hashCode());
-                    plantuml.append("  [").append(safe(row.alarmName)).append("] as ").append(alarmId).append("\n");
-                    // Recipients as boxes
-                    if (row.r1 != null && !row.r1.trim().isEmpty()) {
-                        plantuml.append("  [").append(safe(row.r1)).append("] as R1_").append(Math.abs(row.hashCode())).append("\n");
-                        plantuml.append("  ").append(alarmId).append(" --down- ").append("R1_").append(Math.abs(row.hashCode())).append(" : ").append(safe(row.t1)).append("\n");
-                    }
-                    if (row.r2 != null && !row.r2.trim().isEmpty()) {
-                        plantuml.append("  [").append(safe(row.r2)).append("] as R2_").append(Math.abs(row.hashCode())).append("\n");
-                        plantuml.append("  ").append(alarmId).append(" --down- ").append("R2_").append(Math.abs(row.hashCode())).append(" : ").append(safe(row.t2)).append("\n");
-                    }
-                    if (row.r3 != null && !row.r3.trim().isEmpty()) {
-                        plantuml.append("  [").append(safe(row.r3)).append("] as R3_").append(Math.abs(row.hashCode())).append("\n");
-                        plantuml.append("  ").append(alarmId).append(" --down- ").append("R3_").append(Math.abs(row.hashCode())).append(" : ").append(safe(row.t3)).append("\n");
-                    }
-                    if (row.r4 != null && !row.r4.trim().isEmpty()) {
-                        plantuml.append("  [").append(safe(row.r4)).append("] as R4_").append(Math.abs(row.hashCode())).append("\n");
-                        plantuml.append("  ").append(alarmId).append(" --down- ").append("R4_").append(Math.abs(row.hashCode())).append(" : ").append(safe(row.t4)).append("\n");
-                    }
-                    if (row.r5 != null && !row.r5.trim().isEmpty()) {
-                        plantuml.append("  [").append(safe(row.r5)).append("] as R5_").append(Math.abs(row.hashCode())).append("\n");
-                        plantuml.append("  ").append(alarmId).append(" --down- ").append("R5_").append(Math.abs(row.hashCode())).append(" : ").append(safe(row.t5)).append("\n");
-                    }
+                .collect(Collectors.groupingBy(r -> {
+                    String tabName = (r.customTabSource != null && !r.customTabSource.isBlank())
+                        ? r.customTabSource
+                        : safe(r.type);
+                    String config = (r.configGroup != null && !r.configGroup.isBlank())
+                        ? r.configGroup
+                        : "Unknown";
+                    return tabName + groupDelimiter + config;
+                }));
+
+            List<String> diagrams = new ArrayList<>();
+
+            for (String key : grouped.keySet().stream().sorted().collect(Collectors.toList())) {
+                String[] parts = key.split("\\Q" + groupDelimiter + "\\E", 2);
+                String tabLabel = sanitizeForPlantUml(parts.length > 0 ? parts[0] : "");
+                if ("-".equals(tabLabel)) {
+                    tabLabel = "Unknown Tab";
                 }
-                plantuml.append("}\n");
+                String configLabel = sanitizeForPlantUml(parts.length > 1 ? parts[1] : "Unknown");
+
+                List<ExcelParserV5.FlowRow> flows = grouped.get(key).stream()
+                    .sorted(Comparator.comparing(r -> safe(r.alarmName)))
+                    .collect(Collectors.toList());
+
+                for (int i = 0; i < flows.size(); i += 3) {
+                    List<ExcelParserV5.FlowRow> pageFlows = flows.subList(i, Math.min(i + 3, flows.size()));
+                    diagrams.add(buildVisualFlowDiagram(tabLabel, configLabel, pageFlows));
+                }
             }
-            plantuml.append("@enduml\n");
+
+            if (diagrams.isEmpty()) {
+                showError("No valid flows found to export.");
+                return;
+            }
             // File chooser - check if stage is available
             Stage stage = getStage();
             if (stage == null) {
@@ -3479,14 +3660,64 @@ public class AppController {
             if (file == null) return;
             // Remember directory
             rememberDirectory(file, false);
-            // Generate PDF
-            try (OutputStream os = new FileOutputStream(file)) {
-                SourceStringReader reader = new SourceStringReader(plantuml.toString());
-                reader.outputImage(os, new FileFormatOption(FileFormat.PDF));
+            try (PDDocument document = new PDDocument()) {
+                for (String diagram : diagrams) {
+                    byte[] diagramBytes;
+                    try (ByteArrayOutputStream pngOutput = new ByteArrayOutputStream()) {
+                        SourceStringReader reader = new SourceStringReader(diagram);
+                        reader.outputImage(pngOutput, new FileFormatOption(FileFormat.PNG));
+                        diagramBytes = pngOutput.toByteArray();
+                    } catch (IOException e) {
+                        showError("Error generating diagram: " + e.getMessage());
+                        return;
+                    }
+
+                    BufferedImage diagramImage;
+                    try (ByteArrayInputStream bais = new ByteArrayInputStream(diagramBytes)) {
+                        diagramImage = ImageIO.read(bais);
+                    } catch (IOException e) {
+                        showError("Error reading generated diagram: " + e.getMessage());
+                        return;
+                    }
+
+                    if (diagramImage == null) {
+                        showError("Generated diagram could not be read.");
+                        return;
+                    }
+
+                    float imageWidthPoints = diagramImage.getWidth() * 72f / 96f;
+                    float imageHeightPoints = diagramImage.getHeight() * 72f / 96f;
+
+                    PDPage page = new PDPage(PDRectangle.LETTER);
+                    document.addPage(page);
+
+                    float pageWidth = page.getMediaBox().getWidth();
+                    float pageHeight = page.getMediaBox().getHeight();
+                    float margin = 36f; // half-inch margin
+                    float availableWidth = Math.max(pageWidth - 2 * margin, 1f);
+                    float availableHeight = Math.max(pageHeight - 2 * margin, 1f);
+                    float scale = Math.min(availableWidth / imageWidthPoints, availableHeight / imageHeightPoints);
+                    if (!Float.isFinite(scale) || scale <= 0) {
+                        scale = 1f;
+                    }
+
+                    float drawWidth = imageWidthPoints * scale;
+                    float drawHeight = imageHeightPoints * scale;
+                    float startX = (pageWidth - drawWidth) / 2f;
+                    float startY = (pageHeight - drawHeight) / 2f;
+
+                    PDImageXObject pdImage = LosslessFactory.createFromImage(document, diagramImage);
+                    try (PDPageContentStream contentStream = new PDPageContentStream(document, page)) {
+                        contentStream.drawImage(pdImage, startX, startY, drawWidth, drawHeight);
+                    }
+                }
+
+                document.save(file);
             } catch (IOException e) {
-                showError("Error generating PDF: " + e.getMessage());
+                showError("Error writing PDF: " + e.getMessage());
                 return;
             }
+
             showInfo("Visual Flow PDF saved to:\n" + file.getAbsolutePath());
         } catch (Exception ex) {
             java.io.StringWriter sw = new java.io.StringWriter();
